--- a/src/App.css
+++ b/src/App.css
@@ -91,6 +91,9 @@ body {
     font-size: 100%;
     vertical-align: baseline;
   }
+  html {
+    scroll-behavior: smooth;
+  }
   
   a {
     text-decoration: none;
@@ -106,3 +109,137 @@ body {
   .offset {
     margin-left: 383px;
   }
+
+
+  @media screen and (max-width: 1200px) {
+    .header {
+      margin-left: 25vw;
+      margin-right: 7vw;
+    }
+  
+    .header-image {
+      width: 498px;
+      height: 480px;
+    }
+    .gallery,
+    .projects,
+    .about,
+    .footer {
+      max-width: 730px;
+    }
+  
+    .offset {
+      margin-left: 25vw;
+    }
+    .navigation {
+      width: 191px;
+    }
+  
+    .navigation a {
+      font-size: 18px;
+    }
+  }
+  
+  
+@media screen and (max-width: 1024px) {
+
+
+.about-text {
+  width: 313px;
+}
+  .header {
+    margin-left: 21vw;
+    margin-right: 0;
+  }
+  .header-image {
+    width: 400px;
+    height: 380px;
+  }
+  .offset {
+    margin-left: 21vw;
+  }
+  .navigation {
+    width: 191px;
+  }
+
+  .navigation a {
+    font-size: 17px;
+  }
+
+  
+}
+
+@media screen and (max-width: 954px) {
+  .header {
+    display: flex;
+    margin-left: 10vw;
+    margin-top: 57px;
+    width: 100vw;
+    align-items: center;
+    justify-content: center;
+  }
+  .header-image {
+    width: 350px;
+    height: 330px;
+  }
+
+  .offset {
+    margin: 0 auto;
+  }
+  .nav-block, .navigation {
+    width: 100%;
+  }
+  .about {
+    flex-direction: column;
+    max-width: 692px;
+  }
+  .about-body {
+    margin-left: auto; 
+  }
+  .header-image-wrapper {
+    margin-left: -60px;
+  }
+
+
+  .navigation, .nav-block{
+    flex-direction: row;
+    padding: 0;
+    width: 100%;  }
+
+  .navigation {
+    height: auto;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    -webkit-justify-content: flex-start;
+    justify-content: flex-start;
+    overflow: scroll;
+    position: absolute;
+    padding:  0;
+  } 
+ 
+  .navigation a {
+    margin-bottom: 0;
+    padding: 16px 16px;
+  }
+}
+
+
+@media screen and (max-width: 534px) {
+  .column {
+    padding: 0;
+  }
+
+  .header-image-wrapper {
+    display: none;
+  }
+
+  .header-text-wrapper {
+    width: 90%;
+  }
+
+  .header {
+    margin-left: 0px;
+  }
+  .about-body {
+    width: auto;
+  }
+}
