--- a/src/App.css
+++ b/src/App.css
@@ -1,245 +1,32 @@
 body {
-    margin: 0;
-    padding: 0;
-    -webkit-font-smoothing: antialiased;
-  }
-  
-  html,
-  body,
-  div,
-  span,
-  applet,
-  object,
-  iframe,
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6,
-  p,
-  blockquote,
-  pre,
-  a,
-  abbr,
-  acronym,
-  address,
-  big,
-  cite,
-  code,
-  del,
-  dfn,
-  em,
-  img,
-  ins,
-  kbd,
-  q,
-  s,
-  samp,
-  small,
-  strike,
-  strong,
-  sub,
-  sup,
-  tt,
-  var,
-  b,
-  u,
-  i,
-  center,
-  dl,
-  dt,
-  dd,
-  ol,
-  ul,
-  li,
-  fieldset,
-  form,
-  label,
-  legend,
-  table,
-  caption,
-  tbody,
-  tfoot,
-  thead,
-  tr,
-  th,
-  td,
-  article,
-  aside,
-  canvas,
-  details,
-  embed,
-  figure,
-  figcaption,
-  footer,
-  header,
-  hgroup,
-  menu,
-  nav,
-  output,
-  ruby,
-  section,
-  summary,
-  time,
-  mark,
-  audio,
-  video {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    font-size: 100%;
-    vertical-align: baseline;
-  }
-  html {
-    scroll-behavior: smooth;
-  }
-  
-  a {
-    text-decoration: none;
-  }
-  
-  .page-wrapper {
-    max-width: 1536px;
-    overflow: hidden;
-    margin: 0 auto;
-  }
-  
-
-  .offset {
-    margin-left: 383px;
-  }
-
-
-  @media screen and (max-width: 1200px) {
-    .header {
-      margin-left: 25vw;
-      margin-right: 7vw;
-    }
-  
-    .header-image {
-      width: 498px;
-      height: 480px;
-    }
-    .gallery,
-    .projects,
-    .about,
-    .footer {
-      max-width: 730px;
-    }
-  
-    .offset {
-      margin-left: 25vw;
-    }
-    .navigation {
-      width: 191px;
-    }
-  
-    .navigation a {
-      font-size: 18px;
-    }
-  }
-  
-  
-@media screen and (max-width: 1024px) {
-
-
-.about-text {
-  width: 313px;
-}
-  .header {
-    margin-left: 21vw;
-    margin-right: 0;
-  }
-  .header-image {
-    width: 400px;
-    height: 380px;
-  }
-  .offset {
-    margin-left: 21vw;
-  }
-  .navigation {
-    width: 191px;
-  }
-
-  .navigation a {
-    font-size: 17px;
-  }
-
-  
+  margin: 0;
+  padding: 0;
+  font-family: "Assistant", sans-serif;
+  -webkit-font-smoothing: antialiased;
 }
 
-@media screen and (max-width: 954px) {
-  .header {
-    display: flex;
-    margin-left: 10vw;
-    margin-top: 57px;
-    width: 100vw;
-    align-items: center;
-    justify-content: center;
-  }
-  .header-image {
-    width: 350px;
-    height: 330px;
-  }
-
-  .offset {
-    margin: 0 auto;
-  }
-  .nav-block, .navigation {
-    width: 100%;
-  }
-  .about {
-    flex-direction: column;
-    max-width: 692px;
-  }
-  .about-body {
-    margin-left: auto; 
-  }
-  .header-image-wrapper {
-    margin-left: -60px;
-  }
-
-
-  .navigation, .nav-block{
-    flex-direction: row;
-    padding: 0;
-    width: 100%;  }
-
-  .navigation {
-    height: auto;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    -webkit-justify-content: flex-start;
-    justify-content: flex-start;
-    overflow: scroll;
-    position: absolute;
-    padding:  0;
-  } 
- 
-  .navigation a {
-    margin-bottom: 0;
-    padding: 16px 16px;
-  }
+html {
+  scroll-behavior: smooth;
 }
 
+* {
+  box-sizing: border-box;
+}
+ul {
+  padding: 0;
+  margin: 0;
+  list-style-type: none;
+}
 
-@media screen and (max-width: 534px) {
-  .column {
-    padding: 0;
-  }
+figure {
+  margin: 0;
+}
 
-  .header-image-wrapper {
-    display: none;
-  }
-
-  .header-text-wrapper {
-    width: 90%;
-  }
-
-  .header {
-    margin-left: 0px;
-  }
-  .about-body {
-    width: auto;
-  }
+.container {
+  max-width: 58rem;
+  margin: auto;
+  width: 100%;
+  padding: 0;
+  padding: 1.75rem 1rem;
+  /* background-color: lightblue; */
 }
