--- a/src/styles/Gallery.css
+++ b/src/styles/Gallery.css
@@ -1,41 +1,55 @@
-.gallery-wrapper {
-  margin-top: 30px;
-  padding: 30px 0;
-  margin-bottom: 90px;
+.illustrations-grid {
+  display: grid;
+  grid-template-columns: repeat(11, 1fr);
+  grid-template-rows: repeat(11, 5vw);
+  grid-gap: 1rem;
+  flex-direction: column;
+  flex-flow: row wrap;
 }
 
-.gallery {
-  width: 90%;
-  max-width: 900px;
-  margin: 0 auto;
-}
-
-.column {
-  box-sizing: border-box;
-}
-
-.row {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.column {
-  flex: 50%;
-  max-width: 50%;
-  padding: 0 4px;
-}
-
-.column img {
-  margin-top: 8px;
-  vertical-align: middle;
+.illustrations-grid img {
   width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
-@media screen and (max-width: 600px) {
-  /* one image width */
-  .column {
-    -ms-flex: 100%;
-    flex: 100%;
-    max-width: 100%;
-  }
+.item-1 {
+  grid-column-start: 5;
+  grid-column-end: 12;
+  grid-row-start: 5;
+  grid-row-end: 8;
+}
+
+.item-2 {
+  grid-column-start: 6;
+  grid-column-end: 12;
+  grid-row-start: 1;
+  grid-row-end: 5;
+}
+
+.item-3 {
+  grid-column-start: 1;
+  grid-column-end: 6;
+  grid-row-start: 1;
+  grid-row-end: 5;
+}
+
+.item-4 {
+  grid-column-start: 1;
+  grid-column-end: 5;
+  grid-row-start: 5;
+  grid-row-end: 12;
+}
+
+.item-5 {
+  grid-column-start: 5;
+  grid-column-end: 12;
+  grid-row-start: 8;
+  grid-row-end: 12;
+}
+.item-6 {
+  grid-column-start: 5;
+  grid-column-end: 9;
+  grid-row-start: 5;
+  grid-row-end: 12;
 }
