--- a/src/styles/Navigation.css
+++ b/src/styles/Navigation.css
@@ -1,73 +1,41 @@
-a {
-  text-decoration: none;
-}
-
-.nav-block {
-  width: 256px;
-  display: block;
-  box-sizing: border-box;
-}
-.navigation {
+.nav {
   display: flex;
-  flex-direction: column;
+  justify-content: space-between;
+  /* padding: 1.75rem 0; */
+}
+
+nav img {
+  width: 80px;
+}
+
+nav ul {
+  display: flex;
+  align-items: center;
   height: 100%;
-  justify-content: center;
-  position: fixed;
-  z-index: 3;
-  width: 256px;
-  padding: 0 16px;
-  align-items: flex-end;
 }
 
-.navigation a {
-  margin-bottom: 16px;
-  font-size: 18px;
-  font-family: 'Source Code Pro', monospace;
-  color: #4f505c;
-  transition: color .2s ease;
-  font-weight: 600;
+nav ul li {
+  margin: 0 2.5rem 0 0;
 }
 
-.navigation a {
+nav ul li:last-child {
+  margin: 0;
+}
+
+nav a {
+  text-decoration: none;
+  font-size: 17px;
+  color: #6e7082;
+  transition: color 0.2s ease;
   border-bottom: 1.5px solid transparent;
-  transition: 0.2s ease;
+  font-weight: 600;
+  letter-spacing: 0.0325rem;
+  transition: color 0.2s ease;
 }
 
-.navigation a:hover {
-  border-bottom: 1.5px solid #ecb4b4;
-  transition: 0.2s ease;
+nav a:hover {
+  transition: color 0.2s ease;
   color: #282b42;
-
-
+  box-shadow: inset 0 0 0 0 white, inset 0 -0.095rem 0 0 #c95050;
+  transition: 0.2s;
 }
-
-.navigation a.active {
-  color: #e36060;
-}
-/* 
-@media screen and (max-width: 768px) {
-  .navigation, .nav-block{
-    flex-direction: row;
-    padding: 16px 16px;
-    width: 100%;
-
-  }
-
-  .navigation {
-    height: auto;
-    background-color: #f57676;
-    -webkit-justify-content: flex-start;
-    justify-content: flex-start;
-    overflow: scroll;
-    position: absolute;
-    padding:  0;
-  } 
- 
-  .navigation a {
-    color: white;
-
-    margin-bottom: 0;
-    padding: 16px 16px;
-  }
-}
- */
