--- a/src/styles/Projects.css
+++ b/src/styles/Projects.css
@@ -1,107 +1,72 @@
-.projects-wrapper{
-  padding-top: 20px ;}
-
-.projects {
-  width: 90%;
-  max-width: 900px;
-  margin: 0 auto;
+.grid {
   display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: auto;
-  grid-gap: 20px;
-  padding-bottom: 6vw;
-}
-.hi {
-  grid-column: 1/3;
-}
- 
-.card {
-  min-height: 100%;
-  background: white;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-  display: flex;
-  flex-direction: column;
-  text-decoration: none;
-  color: #444;
-  position: relative;
-  top: 0;
-  transition: all 0.3s ease;
+  grid-template-columns: repeat(auto-fill, minmax(18rem, 1fr));
+  grid-gap: 1em;
 }
 
-.card h1 {
+.card {
+  position: relative;
+  width: 18rem;
+  height: 21rem;
+  display: inline-grid;
+  grid-template-rows: 1fr 1fr;
+  grid-template-columns: 1fr;
+  /* border: lightblue 2px solid; */
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px,
+    rgba(0, 0, 0, 0.05) 0px 5px 15px 0px;
+  border-radius: 0.375rem;
+  transition: 0.3s ease;
+  /* background-color: lightgray; */
+}
+
+.card:hover {
+  cursor: pointer;
+}
+
+.card:hover .project-thumb {
+  opacity: 0.8;
+  transition: 0.3s ease;
+}
+
+.card:hover article h2 {
+  color: #c95050;
+  transition: 0.3s;
+}
+
+article {
+  padding: 1rem;
+}
+
+article h6 {
+  display: inline-block;
+  text-transform: uppercase;
+  font-size: 0.75rem;
+  line-height: 1;
+  letter-spacing: 0.0625rem;
+  font-weight: 600;
+  margin: 0;
+  border-bottom: 0.105rem solid rgb(223, 223, 223);
+  font-family: "Source Code Pro", monospace;
+  color: #777;
+}
+
+article h2 {
+  font-size: 1.425rem;
+  font-weight: 700;
+  margin: 0.625rem 0;
+  line-height: 1;
+  color: #282b42;
   text-decoration: underline transparent;
 }
 
-.card:hover h1 {
-  transition-property: text-decoration-color;
-  text-decoration-color: #e36060;
-  transition: 0.3s;
-}
-  
-
-.card:hover .project-thumb {
-  transition-property: opacity;
-  opacity: 0.8;
-  transition-duration: 0.3s;
+.image-wrapper {
+  border-top-left-radius: 0.375rem;
+  border-top-right-radius: 0.375rem;
 }
 
 .project-thumb {
-  transition-property: opacity;
-  opacity: 1;
-  transition-duration: 0.3s;
-}
-
-.project-link {
-  text-decoration: none;
-  color: #444;
-}
-  
-  
-/* title and description */
- .card article {
-  padding: 20px;
-  display: flex;
-  flex: 1;
-  justify-content: flex-end;
-  flex-direction: column;
-}
-.card .project-thumb {
-  padding-bottom: 60%;
+  border-top-left-radius: 0.375rem;
+  border-top-right-radius: 0.375rem;
   background-size: cover;
   background-position: center center;
-}
-
-.card p, .about-body p{
-  flex: 1; /* make p grow to fill available space*/
-  line-height: 1.4;
-}
-
-/* typography */
-h1 {
-  font-size: 20px;
-  margin: 0;
-  color: #333;
-}
-  
-  /* tag links */
-.card span p{
-font-size: 12px;
-font-weight: bold;
-color: #999;
-text-transform: uppercase;
-letter-spacing: 0.05em;
-margin: 2em 0 0 0;
-}
-
-@media only screen and (min-width: 850px) {
-  .projects{
-    grid-template-columns: 1fr 1fr;
-  }
-}
-
-@media only screen and (max-width: 850px) {
-  .hi {
-    grid-column: 1/2;
-  
-  }
 }
