--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -1,16 +1,19 @@
-
-
 .footer {
-    margin-left:384px;
-    display: flex;
-    width:90%;
-    max-width:900px;
-    padding: 1.75rem 0px 1.75rem;
-
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  color: #c95050;
+  letter-spacing: 0.0325rem;
 }
 
+.footer img {
+  width: 1.35rem;
+  margin-left: 1rem;
+  opacity: 0.6;
+  transition: 0.3s ease;
+}
 
-.footer-text {
-    margin-left:auto; 
-    margin-right:0
+.footer img:hover {
+  opacity: 1;
+  transition: 0.3s ease;
 }
