--- a/src/styles/type.css
+++ b/src/styles/type.css
@@ -17,6 +17,7 @@ h2 {
 }
 
 h1,
+h2,
 h4 {
   margin: 0;
 }
@@ -27,7 +28,7 @@ header a {
 
 .title {
   margin: 0;
-  padding: 0 0 1.75rem 0;
+  padding: 1rem;
 }
 
 .link {
